--- a/index.html
+++ b/index.html
@@ -26,37 +26,50 @@
   </head>
 
   <body id="page-top">
-
-      <!--/ Nav Star /-->
-  <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">Personal Portfolio</a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll active" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#repository">Repository</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#contact">Contact</a>
-          </li>
-        </ul>
+    <!--/ Nav Star /-->
+    <nav
+      class="navbar navbar-b navbar-trans navbar-expand-md fixed-top"
+      id="mainNav"
+    >
+      <div class="container">
+        <a class="navbar-brand js-scroll" href="#page-top"
+          >Personal Portfolio</a
+        >
+        <button
+          class="navbar-toggler collapsed"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarDefault"
+          aria-controls="navbarDefault"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <div
+          class="navbar-collapse collapse justify-content-end"
+          id="navbarDefault"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link js-scroll active" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="#repository">Repository</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <!--/ Nav End /-->
-
+    </nav>
+    <!--/ Nav End /-->
 
     <!--/ Intro Skew Star /-->
     <div
@@ -71,8 +84,8 @@
             <h1 class="intro-title mb-4">I am Dionysios Baltimas</h1>
             <p class="intro-subtitle">
               <span class="text-slider-items"
-                >Welcome to My Personal Portfolio,Web Developer,Frontend Developer,Angular
-                Developer</span
+                >Welcome to My Personal Portfolio,Web Developer,Frontend
+                Developer,Angular Developer</span
               ><strong class="text-slider"></strong>
             </p>
           </div>
@@ -81,76 +94,89 @@
     </div>
     <!--/ Intro Skew End /-->
 
-
-
     <!--/ About Section /-->
     <section id="about" class="about-mf sect-pt4 route">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="box-shadow-full">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="row">
-                      <div class="col-sm-6 col-md-7">
-                        <div class="about-info">
-                          <p>
-                            <span class="title-s">Name: </span>
-                            <span class="title-sa"><i>Dionysios Baltimas</i></span>
-                          </p>
-                          <p>
-                            <span class="title-s">Profile: </span>
-                            <span class="title-sa"><i>FrontEnd Developer</i></span>
-                          </p>
-                          <p>
-                            <span class="title-s">Email: </span>
-                            <span class="title-sa"><i>baltimas.dion@gmail.com</i></span>
-                          </p>
-                          <p>
-                            <span class="title-s">Phone: </span>
-                            <span class="title-sa"><i>+30 698-631-9591</i></span>
-                          </p>
-                        </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="box-shadow-full">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-sm-3 col-md-7">
+                      <div class="about-info">
+                        <p>
+                          <span class="title-s">Name: </span>
+                          <span class="title-sa"
+                            ><i>Dionysios Baltimas</i></span
+                          >
+                        </p>
+                        <p>
+                          <span class="title-s">Profile: </span>
+                          <span class="title-sa"
+                            ><i>FrontEnd Developer</i></span
+                          >
+                        </p>
+                        <p>
+                          <span class="title-s">Email: </span>
+                          <span class="title-sa"
+                            ><i>baltimas.dion@gmail.com</i></span
+                          >
+                        </p>
+                        <p>
+                          <span class="title-s">Phone: </span>
+                          <span class="title-sa"><i>+30 698-631-9591</i></span>
+                        </p>
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <div class="about-me pt-4 pt-md-0">
-                      <div class="title-box-2">
-                        <h5 class="title-left">About me</h5>
-                      </div>
-                      <p class="lead"><i>
+                </div>
+                <div class="col-md-9">
+                  <div class="about-me pt-4 pt-md-0">
+                    <div class="title-box-2">
+                      <h5 class="title-left">About me</h5>
+                    </div>
+                    <p class="lead">
+                      <i>
                         I am proficient in Angular and associated technologies,
                         including HTML, CSS, and JavaScript. My extensive
                         knowledge in these areas has allowed me to design and
                         implement user-friendly interfaces for various projects.
-                        My hands-on experience with Angular frameworks has enabled
-                        me to create responsive, efficient, and highly interactive
-                        web applications that meet client requirements. I have a
-                        thorough understanding of Angular's core principles, such
-                        as modularity, dependency injection, and directives.</i>
-                       </p>
-                       <p class="lead"><i>Furthermore, my strong communication skills and
+                        My hands-on experience with Angular frameworks has
+                        enabled me to create responsive, efficient, and highly
+                        interactive web applications that meet client
+                        requirements. I have a thorough understanding of
+                        Angular's core principles, such as modularity,
+                        dependency injection, and directives.</i
+                      >
+                    </p>
+                    <p class="lead">
+                      <i
+                        >Furthermore, my strong communication skills and
                         problem-solving abilities, long with my expertise in
                         Angular technology, enable me to collaborate effectively
-                        with others to identify and resolve technical challenges.
-                        I am confident in my ability to deliver high-quality
-                        results and strive to continuously improve my skills and
-                        knowledge in this field.</i>
-                     </p>
-                    </div>
+                        with others to identify and resolve technical
+                        challenges. I am confident in my ability to deliver
+                        high-quality results and strive to continuously improve
+                        my skills and knowledge in this field.</i
+                      >
+                    </p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
-  
+      </div>
+    </section>
+
     <!--/End About Section /-->
 
     <!--/ Section My Repo Star /-->
-    <section id="repository" class="section projects is-medium is-white has-text-centered">
+    <section
+      id="repository"
+      class="section projects is-medium is-white has-text-centered"
+    >
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -163,7 +189,7 @@
               <div class="line-mf"></div>
             </div>
           </div>
-         </div>
+        </div>
         <div class="project-grid">
           <div class="columns is-multiline is-mobile">
             <div
@@ -215,7 +241,7 @@
                   </h1>
                   <a
                     class="button is-primary is-outlined is-rounded"
-                    href="https://github.com/DionBalt/Tic-Tac-Toe"
+                    href="https://github.com/DionBalt/Angular-Calculator"
                     target="_blank"
                     ><span>Visit GitHub</span></a
                   >
@@ -272,7 +298,7 @@
                   </h1>
                   <a
                     class="button is-primary is-outlined is-rounded"
-                    href="http://coffeeappbrew.epizy.com/?i=1"
+                    href="https://github.com/DionBalt/Movies-Database-App"
                     target="_blank"
                     >Visit GitHub</a
                   >
@@ -297,71 +323,64 @@
     </section>
     <!--/ Section My Repo End /-->
 
-
     <!--/ Section Contact-Footer Star /-->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route">
-      <div class="overlay-mf"></div>
+    <section id="contact" class="paralax-mf footer-paralax">
       <div class="">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="contact-mf">
-              <div id="contact" class="box-shadow-full">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="title-box-2"></div>
+        <div class="col-md-12">
+          <div class="contact-mf">
+            <div class="box-shadow-full">
+              <div>
+                <div class="col-md-12">
+                  <div class="title-box-2 pt-4 pt-md-0">
+                    <h5 class="title-left">Get in Touch</h5>
                   </div>
-                  <div class="col-md-12">
-                    <div class="title-box-2 pt-4 pt-md-0">
-                      <h5 class="title-left">Get in Touch</h5>
-                    </div>
-                    <div class="more-info">
-                      <p><h4><strong>Interested in working together?</strong></h4></p>
-                      <ul class="list-ico">
-                        <li>
-                          <a
-                            href="mailto:baltimas.dion@gmail.com"
-                            class="ion-ios-email"
-                          >
-                            baltimas.dion@gmail.com
-                          </a>
-                        </li>
-                        <li>
-                          <a href="tel:+306986319591" class="ion-ios-telephone">
-                            +30 698-631-9591
-                          </a>
-                        </li>
-                        <li>
-                          <a
-                            href="https://drive.google.com/drive/folders/1JNQCJMfZly2-bndQkn9Wa_Brj0frgUVS"
-                            target="_blank"
-                            class="ion-ios-cloud-download"
-                          >
-                            My CV
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="socials">
-                      <h6><strong>Find me on</strong></h6>
-                      <ul>
-                        <li>
-                          <a
-                            href="https://github.com/DionBalt?tab=repositories"
-                            target="_blank"
-                            ><span class="ico-circle"
-                              ><i class="fa fa-github"></i></span
-                          ></a>
-                        </li>
-                        <li>
-                          <a
-                            href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
-                            target="_blank"
-                            ><span class="ico-circle"
-                              ><i class="fa fa-linkedin-square"></i></span
-                          ></a>
-                        </li>
-                      </ul>
-                    </div>
+                  <div class="more-info">
+                    <h4><strong>Interested in working together?</strong></h4>
+                    <ul class="list-ico">
+                      <li>
+                        <a
+                          href="mailto:baltimas.dion@gmail.com"
+                          class="ion-ios-email"
+                        >
+                          baltimas.dion@gmail.com
+                        </a>
+                      </li>
+                      <li>
+                        <a href="tel:+306986319591" class="ion-ios-telephone">
+                          +30 698-631-9591
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://drive.google.com/drive/folders/1JNQCJMfZly2-bndQkn9Wa_Brj0frgUVS"
+                          target="_blank"
+                          class="ion-ios-cloud-download"
+                        >
+                          My CV
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="socials">
+                    <h6><strong>Find me on</strong></h6>
+                    <ul>
+                      <li>
+                        <a
+                          href="https://github.com/DionBalt?tab=repositories"
+                          target="_blank"
+                          ><span class="ico-circle"
+                            ><i class="fa fa-github"></i></span
+                        ></a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
+                          target="_blank"
+                          ><span class="ico-circle"
+                            ><i class="fa fa-linkedin-square"></i></span
+                        ></a>
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -369,10 +388,8 @@
           </div>
         </div>
       </div>
-    </section>
 
-     <!--Footer-->
-     <section>
+      <!--Footer-->
       <footer>
         <div class="container">
           <div class="row">
@@ -403,8 +420,6 @@
     <script src="lib/counterup/jquery.counterup.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/typed/typed.min.js"></script>
-    <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
